--- a/src/theme/theme-hacker.scss
+++ b/src/theme/theme-hacker.scss
@@ -85,8 +85,14 @@ $green-fg: #20c20e;
     background: $new-primary !important;
   }
 
-  .bar-button-solid-md-primary, .button-md-primary, .badge-md, .bar-button-default-md, .bar-button-md-primary {
+  .bar-button-solid-md-primary, .button-md-primary, .bar-button-default-md, .bar-button-md-primary {
     background-color: lighten($new-primary, 10%) !important;
+    color: $green-fg !important;
+  }
+
+  .badge-md {
+    background-color: darken($new-primary, 20%) !important;
+    border: 1px solid $green-fg;
     color: $green-fg !important;
   }
 
